Fix btn-sm on iOS
When using the btn-sm class with no padding for the buttons there is no padding but on Android there was padding.
Add 5px which does not change the appearance in Android.
Fix #14

--- a/app/app.css
+++ b/app/app.css
@@ -71,7 +71,7 @@ button {
 
 .btn-sm {
   font-size: 14;
-  padding: 0 5;
+  padding: 5 5;
 }
 
 .blue-label {
